# Vaultrs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.docs/: ARCHITECTURE.md  DATABASE.md  INSTALLATION.md  STYLING.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml.disable  release.yml.disable
desktop/: .env.example  .eslintrc.cjs  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.ts  vite.config.ts
desktop/src/: App.css  App.tsx  globals.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs
desktop/src-tauri/src/commands/: entry_commands.rs  field_commands.rs  image_commands.rs  mod.rs  relation_commands.rs  vault_commands.rs
desktop/src-tauri/src/core/: error.rs  mod.rs  utils.rs
desktop/src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
desktop/src-tauri/src/entities/: entry.rs  field_definition.rs  mod.rs  vault.rs
desktop/src-tauri/src/entry/: image_service.rs  metadata_service.rs  mod.rs  model.rs  search_service.rs  service.rs
desktop/src-tauri/src/field/: mod.rs  model.rs  service.rs
desktop/src-tauri/src/image/: mod.rs  processor.rs  storage.rs
desktop/src-tauri/src/relation/: mod.rs  model.rs  service.rs
desktop/src-tauri/src/vault/: mod.rs  model.rs  service.rs
docs/00-meta/: 1-folder-structure.md  2-naming-convention.md  3-how-to-document.md  4-glossary.md  5-versioning.md  6-docs-index.md
docs/02-database/: 1-overview.md  (+6 more)
openspec/: AGENTS.md  config.yaml  project.md
(+156 files in other folders)
